Add artifact upload step to Docker workflow
Add step to archive build artifacts after deployment

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,3 +32,9 @@ jobs:
       env:
         # Example using a GitHub Secret for a sensitive variable
         FolderProfile: ${{ secrets.PUBLISH_PROFILE_XML }}
+
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: web-app-release
+        path: bin\app.publish\
