--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,3 +38,17 @@ jobs:
       with:
         name: web-app-release
         path: bin\app.publish\
+
+    - name: Log in to Docker Hub (or other registry)
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }} 
+        
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ${{ github.workspace }} # Specifies the build context as the workspace
+        file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
+        push: true # Set to true to push to a registry
+        tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
