--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,6 +39,9 @@ jobs:
         name: web-app-release
         path: bin\app.publish\
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Log in to Docker Hub (or other registry)
       uses: docker/login-action@v3
       with:
