--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,11 +48,17 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }} 
         
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ${{ github.workspace }} # Specifies the build context as the workspace
-        file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
-        push: true # Set to true to push to a registry
-        tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
-        platform: windows/amd64
+    #- name: Build and push Docker image
+     # uses: docker/build-push-action@v5
+      #with:
+      #  context: ${{ github.workspace }} # Specifies the build context as the workspace
+       # file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
+      #  push: true # Set to true to push to a registry
+      #  tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
+      #  platform: windows/amd64
+
+    - name: Build and Push
+      shell: powershell
+      run: |
+        docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest
