Use environment variable for Docker Hub username

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -59,6 +59,9 @@ jobs:
 
     - name: Build and Push
       shell: powershell
+      env:
+        DOCKER_HUB_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
+
       run: |
-        docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest
+        docker build . -t ${{ env.DOCKERHUB_USERNAME }}/testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
+        docker push ${{ env.DOCKERHUB_USERNAME }}/testgithubactions:latest
