Update Docker commands to use environment variable syntax

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -63,5 +63,5 @@ jobs:
         REG_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
 
       run: |
-        docker build . -t ${{ env.REG_USER_NAME }}/testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
-        docker push ${{ env.REG_USER_NAME }}/testgithubactions:latest
+        docker build . -t $env.REG_USER_NAME/testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
+        docker push $env.REG_USER_NAME/testgithubactions:latest
