--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,8 +39,8 @@ jobs:
         name: web-app-release
         path: bin\app.publish\
 
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub (or other registry)
       uses: docker/login-action@v3
@@ -48,19 +48,19 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }} 
         
-    #- name: Build and push Docker image
-     # uses: docker/build-push-action@v5
-      #with:
-      #  context: ${{ github.workspace }} # Specifies the build context as the workspace
-       # file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
-      #  push: true # Set to true to push to a registry
-      #  tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
-      #  platform: windows/amd64
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: ${{ github.workspace }} # Specifies the build context as the workspace
+        file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
+        push: true # Set to true to push to a registry
+        tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
+        platform: windows/amd64
 
-    - name: Build and Push
-      shell: powershell
-      env:
-        REG_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
+        # - name: Build and Push
+    #   shell: powershell
+    #   env:
+    #     REG_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
 
       #run: |
        # Write-Host "Registry user name: $($env:REG_USER_NAME)"
@@ -68,10 +68,10 @@ jobs:
        # docker push testgithubactions:latest
 
 
-      run: |
-          Write-Host "Registry user name: $($env:REG_USER_NAME)"
-          $imageName = "${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest"
-          Write-Host "Building Docker image: $imageName"
-          docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
-          Write-Host "Pushing Docker image: $imageName"
-          docker push $imageName
+      # run: |
+      #     Write-Host "Registry user name: $($env:REG_USER_NAME)"
+      #     $imageName = "${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest"
+      #     Write-Host "Building Docker image: $imageName"
+      #     docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
+      #     Write-Host "Pushing Docker image: $imageName"
+      #     docker push $imageName
