--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platform: windows/amd64
+        platforms: windows/amd64
 
     - name: Log in to Docker Hub (or other registry)
       uses: docker/login-action@v3
