--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,7 +75,7 @@ jobs:
       env:
          REG_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
       run: |
-           Write-Host "Registry user name: ${{env:REG_USER_NAME}}"
+           Write-Host "Registry user name: $env:REG_USER_NAME"
            $imageName = "${{ secrets.DOCKERHUB_USERNAME }}/testgithubactions:latest"
            Write-Host "Building Docker image: $imageName"
            docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
