--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,45 +39,22 @@ jobs:
         name: web-app-release
         path: bin\app.publish\
 
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v3
-      #with:
-        #platforms: windows/amd64
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Log in to Docker Hub (or other registry)
+    - name: Build Docker Image
+      run: docker build -t ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ${{ github.workspace }}/Dockerfile .
+
+    - name: Log in to Azure Container Registry
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
-        
-    #- name: Build and push Docker image
-    #  uses: docker/build-push-action@v6
-    #  with:
-    #    context: ${{ github.workspace }} # Specifies the build context as the workspace
-    #    file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
-    #    push: true # Set to true to push to a registry
-     #   tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
-    #    platforms: windows/amd64
+        registry: ${{ env.ACR_NAME }}.azurecr.io
+        username: ${{ secrets.AZURE_CLIENT_ID }}
+        password: ${{ secrets.AZURE_CLIENT_SECRET }}
 
-        # - name: Build and Push
-    #   shell: powershell
-    #   env:
-    #     REG_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
-
-      #run: |
-       # Write-Host "Registry user name: $($env:REG_USER_NAME)"
-       # docker build --build-arg GITHUB_WKSPC=${{ github.workspace }} -t testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
-       # docker push testgithubactions:latest
-
-    - name: Build and Push
-      shell: powershell
-      env:
-         REG_USER_NAME: ${{ secrets.DOCKER_USERNAME }} # Assign the secret to an environment variable
-      run: |
-           Write-Host "Registry user name: $env:REG_USER_NAME"
-           $imageName = "${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest"
-           Write-Host "Building Docker image: $imageName"
-           docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
-           Write-Host "Pushing Docker image: $imageName"
-           docker push $imageName
+    - name: Push Docker Image to ACR
+      run: docker push ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
