--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,40 +44,35 @@ jobs:
       #with:
         #platforms: windows/amd64
 
-    - name: Log in to Docker Hub (or other registry)
+    - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ vars.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
-        
-    #- name: Build and push Docker image
-    #  uses: docker/build-push-action@v6
-    #  with:
-    #    context: ${{ github.workspace }} # Specifies the build context as the workspace
-    #    file: ${{ github.workspace }}/Dockerfile # Path to your Dockerfile
-    #    push: true # Set to true to push to a registry
-     #   tags: ${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest
-    #    platforms: windows/amd64
+    - name: Extract Docker image metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+          images: |
+            #your-dockerhub-username/your-app
+            #ghcr.io/your-github-username/your-app
+            ghcr.io/${{ github.repository }}
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+          labels: |
+            org.opencontainers.image.title=${{ github.event.repository.name }}
+            org.opencontainers.image.description=This is a test app to validat github acitons
 
-        # - name: Build and Push
-    #   shell: powershell
-    #   env:
-    #     REG_USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }} # Assign the secret to an environment variable
-
-      #run: |
-       # Write-Host "Registry user name: $($env:REG_USER_NAME)"
-       # docker build --build-arg GITHUB_WKSPC=${{ github.workspace }} -t testgithubactions:latest -f ${{ github.workspace }}/Dockerfile .
-       # docker push testgithubactions:latest
-
-    - name: Build and Push
-      shell: powershell
-      env:
-         REG_USER_NAME: ${{ secrets.DOCKER_USERNAME }} # Assign the secret to an environment variable
-      run: |
-           Write-Host "Registry user name: $env:REG_USER_NAME"
-           $imageName = "${{ secrets.DOCKER_USERNAME }}/testgithubactions:latest"
-           Write-Host "Building Docker image: $imageName"
-           docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
-           Write-Host "Pushing Docker image: $imageName"
-           docker push $imageName
+    - name: Build and push
+      uses: docker/build-push-action@v6
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+    
