--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,9 +8,12 @@ on:
 
 jobs:
 
-  build:
+  build-and-push:
 
     runs-on: windows-latest
+    permissions:
+      contents: read
+      packages: write # Required to push images to GHCR
 
     steps:
     - uses: actions/checkout@v4
@@ -39,16 +42,12 @@ jobs:
         name: web-app-release
         path: bin\app.publish\
 
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v3
-      #with:
-        #platforms: windows/amd64
-
-    - name: Log in to Docker Hub
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
-        username: ${{ vars.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }} #The github.actor variable in GitHub Actions provides the username of the user or app that initiated the workflow run.
+          password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Extract Docker image metadata
       id: meta
@@ -71,8 +70,13 @@ jobs:
 
     - name: Build and push
       uses: docker/build-push-action@v6
-        with:
+      with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            APP_WKSPC=$${{ github.workspace }}
+          context: . # Or specify a different build context path
+          file: ./Dockerfile # Specify the path to your Dockerfile
+
     
