Update Docker login action to use REGISTRY_PAT

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,7 +47,7 @@ jobs:
       with:
           registry: ghcr.io
           username: ${{ github.actor }} #The github.actor variable in GitHub Actions provides the username of the user or app that initiated the workflow run.
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.REGISTY_PAT }}
     
     - name: Extract Docker image metadata
       id: meta
