--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -94,6 +94,6 @@ jobs:
            docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
            Write-Host "Pushing Docker image: $imageName"
            docker login ghcr.io -u $username -p $password
-           docker push $imageName
+           docker push ghcr.io/$imageName
 
     
