--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -85,13 +85,13 @@ jobs:
          REG_USER_NAME: ${{ github.actor }}  # Assign the secret to an environment variable
          MY_USERNAME: ${{ github.actor }}
          MY_PASSWORD: ${{ secrets.REGISTY_PAT }}
-         REP_NAME: "TestGitHubActions"
+         REP_NAME: "testgithubactions"
       run: |
            $username = $env:MY_USERNAME
            $password = $env:MY_PASSWORD
            Write-Host "Registry user name: $env:REG_USER_NAME"
            Write-Host "Repository name: $env:REP_NAME"
-           $imageName = "ghcr.io/$env:REG_USER_NAME/$env:REP_NAME:latest"
+           $imageName = "ghcr.io/$env:REG_USER_NAME/testgithubactions:latest"
            Write-Host "Building Docker image: $imageName"
            Write-Host "Github Workspace: ${{ github.workspace }}"
            docker build -t $imageName -f ${{ github.workspace }}/Dockerfile .
